Fixed the bugs with the NFT images not showing

--- a/src/Components/NftCard/NftCard.css
+++ b/src/Components/NftCard/NftCard.css
@@ -108,3 +108,19 @@
     margin-top: 10px;
     color: #815EE3;
 }
+
+.ant-btn-default {
+    color: #815EE3;
+    font-size: 15px;
+    font-family: "Inter", sans-serif;
+    border: #815EE3 1px dashed;
+}
+
+.ant-btn-primary {
+    background: #815EE3;
+    font-size: 15px;
+}
+
+.ant-modal-content {
+    border-radius: 30px !important;
+}
